# SICAR

./: .coveragerc  .dockerignore  .gitignore  CITATION.cff  Dockerfile  Dockerfile.api  Dockerfile.base  Dockerfile.download-car  LICENSE  Makefile  README.md  api.sh  app.py  captcha.ipynb  captcha.py  docker-build.sh  docker-compose.yml  download_state.sh  downloads.js  entrypoint.api.sh  entrypoint.download.sh  main.py  pyproject.toml  requirements.txt  setup.py  sicar.py  sicar_colab.ipynb
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: black.yml  greetings.yml  publish_docker_image.yml  pypi-release.yml  tests.yml
SICAR/: __init__.py  captcha.py  exceptions.py  output_format.py  polygon.py  sicar.py  state.py  url.py
SICAR/drivers/: __init__.py  captcha.py  manual.py  paddle.py  tesseract.py
SICAR/tests/: __init__.py  manual.py  sicar.py  tesseract.py
SICAR/tests/integration/: __init__.py  paddle.py  sicar.py  tesseract.py
SICAR/tests/unit/: __init__.py  car.py  exceptions.py  output_format.py  polygon.py  sicar.py  state.py  url.py
SICAR/tests/unit/drivers/: captcha.py  paddle.py  tesseract.py
download_car/: __init__.py  exceptions.py  polygon.py  sicar.py  state.py  url.py
download_car/drivers/: __init__.py  captcha.py  paddle.py  tesseract.py
download_car/tests/: __init__.py
download_car/tests/integration/: __init__.py  paddle.py  sicar.py  tesseract.py
download_car/tests/unit/: __init__.py  exceptions.py  polygon.py  sicar.py  state.py  url.py
download_car/tests/unit/drivers/: captcha.py  paddle.py  tesseract.py
examples/: colab.ipynb  docker.py  download_state.py  parallel.py  tesseract.ipynb
src/: captcha.ipynb  captcha.py  example.ipynb  sicar.py  start.py
