# pyproject.toml
[project]
name = "download-car"
version = "0.7.7"
authors = [{ name = "Ricardo Malnati", email = "ricardomalnati@gmail.com" }]
description = "download-car - Tool designed for students, researchers, data scientists or anyone who would like to have access to download-car files."
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "httpx>=0.28.1",
    "urllib3>=2.3.0",
    "pytesseract>=0.3.13",
    "opencv-python>=4.11.0.86",
    "numpy>=2.0.2",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.0",
    "beautifulsoup4>=4.13.4"
]

[project.optional-dependencies]
paddle = ["paddlepaddle>=3.0.0", "paddleocr>=2.10.0"]
dev = ["coverage", "interrogate", "black", "coveralls"]
all = ["download-car[paddle,dev]"]

[project.urls]
"Homepage" = "https://github.com/Malnati/download-car"
"Bug Tracker" = "https://github.com/Malnati/download-car/issues"

[tool.setuptools]
packages = ["download_car", "download_car.drivers"]

[tool.interrogate]
exclude = ["download_car/tests*", "examples/*"]
verbose = 2
generate-badge = ".github"

[tool.coverage.run]
source = ["download_car"]
omit = ["download_car/tests/integration/*"]

[tool.coverage.report]
show_missing = true
ignore_errors = false
fail_under = 100
exclude_lines = ["except ImportError:"]
